fix headings wrap

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,7 @@
 html, body { background-color:#eee; }
 .container > footer p { text-align:center; }
 .container { max-width:870px; }
-#welcome h3 { margin-top:1em; }
+#welcome h3 { margin-top:1em; white-space:nowrap; }
 footer { border:none; margin:1em; }
 #write footer { margin:3em; }
 
